deployment/overlays/ns-1/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: lab-ns-1
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    app: lab-ns-1
    service: lab-ns
