deployment/overlays/ns-1/deployment-ui.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-ns-ui-1
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app: lab-ns-1
    service: lab-ns
    component: lab-ns-ui
    id: lab-ns-ui-1
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lab-ns-1
      service: lab-ns
      component: lab-ns-ui
      id: lab-ns-ui-1
  replicas: 1
  template:
    metadata:
      labels:
        app: lab-ns-1
        service: lab-ns
        component: lab-ns-ui
        id: lab-ns-ui-1
    spec:
      securityContext:
        runAsUser: 100
        runAsGroup: 101
        fsGroup: 101
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - lab-ns-1
              topologyKey: "kubernetes.io/hostname"
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "component"
                    operator: In
                    values:
                      - lab-ns-ui
              topologyKey: "kubernetes.io/hostname"
              namespaceSelector: {}
      containers:
        - name: lab-ns-ui
          #  capabilities:
          #    add:
          #      - CHOWN
          #      - NET_BIND_SERVICE
          #      - NET_ADMIN
          #      - SETFCAP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          image: docker.io/powerdnsadmin/pda-legacy:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: ui-data
              mountPath: /data
      volumes:
        - name: ui-data
          persistentVolumeClaim:
            claimName: pdns-1-ui-data
