deployment/overlays/ns-1/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: lab-ns-1-auth
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  #  metallb.universe.tf/loadBalancerIPs: 192.168.42.9
  #  metallb.universe.tf/address-pool: lab-pool
  #  metallb.universe.tf/allow-shared-ip: "key-to-share-192.168.42.9"
  labels:
    app: lab-ns-1
    service: lab-ns
    component: lab-ns-auth
    id: lab-ns-auth-1
spec:
  ports:
    - port: 5300
      protocol: TCP
      targetPort: 5300
      name: dns-tcp
    - port: 5300
      protocol: UDP
      targetPort: 5300
      name: dns-udp
    - port: 8081
      protocol: TCP
      targetPort: 8081
      name: api-tcp
  selector:
    id: lab-ns-auth-1
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: lab-ns-1-auth-tcp-ext
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    metallb.universe.tf/loadBalancerIPs: 192.168.42.9
    metallb.universe.tf/address-pool: lab-pool
    metallb.universe.tf/allow-shared-ip: "key-to-share-192.168.42.9"
  labels:
    app: lab-ns-1
    service: lab-ns
    component: lab-ns-auth
    id: lab-ns-auth-1
spec:
  ports:
    - port: 5300
      protocol: TCP
      targetPort: 5300
      name: dns-tcp
    - port: 8081
      protocol: TCP
      targetPort: 8081
      name: api-tcp
  selector:
    id: lab-ns-auth-1
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: lab-ns-1-auth-udp-ext
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    metallb.universe.tf/loadBalancerIPs: 192.168.42.9
    metallb.universe.tf/address-pool: lab-pool
    metallb.universe.tf/allow-shared-ip: "key-to-share-192.168.42.9"
  labels:
    app: lab-ns-1
    service: lab-ns
    component: lab-ns-auth
    id: lab-ns-auth-1
spec:
  ports:
    - port: 5300
      protocol: UDP
      targetPort: 5300
      name: dns-udp
  selector:
    id: lab-ns-auth-1
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: lab-ns-1-recursor-tcp
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    metallb.universe.tf/loadBalancerIPs: 192.168.42.9
    metallb.universe.tf/address-pool: lab-pool
    metallb.universe.tf/allow-shared-ip: "key-to-share-192.168.42.9"
  labels:
    app: lab-ns-1
    service: lab-ns
    component: lab-ns-recursor
    id: lab-ns-recursor-1
spec:
  ports:
    - port: 5353
      protocol: TCP
      targetPort: 5353
      name: dns-tcp
    - port: 53
      protocol: TCP
      targetPort: 5353
      name: dns-tcp-primary
  selector:
    id: lab-ns-recursor-1
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: lab-ns-1-recursor-udp
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    metallb.universe.tf/loadBalancerIPs: 192.168.42.9
    metallb.universe.tf/address-pool: lab-pool
    metallb.universe.tf/allow-shared-ip: "key-to-share-192.168.42.9"
  labels:
    app: lab-ns-1
    service: lab-ns
    component: lab-ns-recursor
    id: lab-ns-recursor-1
spec:
  ports:
    - port: 5353
      protocol: UDP
      targetPort: 5353
      name: dns-udp
    - port: 53
      protocol: UDP
      targetPort: 5353
      name: dns-udp-primary
  selector:
    id: lab-ns-recursor-1
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: lab-ns-1-ui
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app: lab-ns-1
    service: lab-ns
    component: lab-ns-ui
    id: lab-ns-ui-1
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: ui-tcp
  selector:
    id: lab-ns-ui-1
  type: ClusterIP
