deployment/overlays/ns-1/ingress-ui.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ns-ui-1
  annotations:
    argocd.argoproj.io/sync-wave: "5"
  labels:
    app: lab-ns-1
    service: lab-ns
    component: lab-ns-ui
    id: lab-ns-ui-1
spec:
  ingressClassName: nginx
  rules:
    - host: ns1.apps.k8s.kemo.labs
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: lab-ns-1-ui
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ns-api-1
  annotations:
    argocd.argoproj.io/sync-wave: "5"
  labels:
    app: lab-ns-1
    service: lab-ns
    component: lab-ns-auth
    id: lab-ns-auth-1
spec:
  ingressClassName: nginx
  rules:
    - host: ns1-api.apps.k8s.kemo.labs
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: lab-ns-1-auth
                port:
                  number: 8081
